<resources>
    <string name="app_name">Under Radar Android</string>
    <string name="title_home">Home</string>
    <string name="title_clubs">Clubs</string>
    <string name="title_colleges">Colleges</string>
    <string name="title_more">More</string>
    <string name="title_events">Events</string>
    <string name="title_stories">Stories</string>
    <string name="title_profile">Profile</string>
    <string name="title_players">Players</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string-array name="profile_types">
        <item>High School Player</item>
        <item>Juco Player</item>
        <item>College Coach</item>
        <item>Club Coach</item>
        <item>General Coach (HS or Trainer)</item>
    </string-array>
</resources>