<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_players"
        android:title="@string/title_players" />

    <item
        android:id="@+id/navigation_collegeList"
        android:icon="@drawable/ic_college"
        android:title="@string/title_colleges" />


    <item
        android:id="@+id/navigation_clubs"
        android:icon="@drawable/ic_club"
        android:title="@string/title_clubs" />


    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_more"
        android:title="@string/title_more" />

</menu>